--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+<link rel="stylesheet" href="cooper.css">
+
+</head>
+
+
+
+<!----
 </head>
 
 <body>
-    <H1>
-        My Portfolio
-    </H1>
-    <!-- 
+    
       Directions:
         1. Create a DIV element to contain the page content
         2. Inside your DIV, create an H1 tag that contains your name as the text
@@ -32,6 +37,39 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+<div>
+  <h1>Adrienne Cooper</h1>
+  <h2>Software Developer</h2>
+  <hr />
+  <p>My <i>favorite</i> thing about programming is solving problems</p>
+  <h3>About Me</h3>
+  <img src= "./mypic.jpg"  alt="Adrienne Cooper"> />
+  <p>
+    Lorem ipsum dolor sit amet, movet vidisse partiendo sea ut, sed ei posidonium signiferumque, tincidunt
+    reprimique eam no. Ei corpora ponderum praesent ius, cum in nibh noster definitionem. Ut utroque imperdiet
+    nam, stet ridens graeci ne sea, ea solum
+    inciderint has. Nec laudem nominati ad, cu posse solet mollis usu. Vim posse disputando consequuntur at. Et
+    sint tantas facilisi vim. At harum exerci lobortis eos, eros homero assentior nam eu. An tation decore
+    equidem vix, at nam omittam
+    sensibus. Eu quas veniam cum, et consequat constituam sit. His cu dicat minim accumsan, et usu consequat
+    intellegam.
+  </p>
+  <h3>My Projects</h3>
+  <ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+  </ul>
+  <h3>Contact Me</h3>
+  <p><strong>Phone:</strong>(704)879-3500</p>
+  <a href="http://" tina012099@gmail.com>
+    <p>Email:tina012099@gmail.com </p>
+  </a>
+</div>
+
+
+
+
 </body>
 
 </html>
